--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-<h1>Hello world!!!!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Software Developer Portfolio</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Your Name</a>
+    </nav>
+  </header>
+
+  <div class="container mt-4">
+    <h1>Software Developer</h1>
+    <h3>7 Years of Experience</h3>
+
+    <h4>Expertise</h4>
+    <ul>
+      <li>PHP</li>
+      <li>Laravel</li>
+      <li>MySQL</li>
+    </ul>
+
+    <h4>Basic Knowledge</h4>
+    <ul>
+      <li>AWS</li>
+    </ul>
+
+    <h4>Projects</h4>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Project Title</h5>
+        <p class="card-text">Project description goes here.</p>
+      </div>
+    </div>
+
+    <div class="card mt-3">
+      <div class="card-body">
+        <h5 class="card-title">Project Title</h5>
+        <p class="card-text">Project description goes here.</p>
+      </div>
+    </div>
+
+    <!-- Add more projects as needed -->
+
+  </div>
+
+  <footer class="bg-dark text-white mt-4 py-3">
+    <div class="container">
+      <p>&copy; 2023 Your Name</p>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
