--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div class="card-body">
         <h5 class="card-title">Project Title</h5>
         <p class="card-text">Project description goes here.</p>
+        <a href="https://kamilkahar90.github.io/clazzy">Click here</a> and enjoy
       </div>
     </div>
 
